# game_engine

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: clang-format.yml
assets/: tree.glb
docs/: 2025-12-17-vulkan-setup.md
scripts/git/: pre-commit
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  vulkan_context.cpp  vulkan_context.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
src/backend/core/: CMakeLists.txt  vk_backend_ctx.cpp  vk_backend_ctx.hpp  vk_device.cpp  vk_device.hpp  vk_instance.cpp  vk_instance.hpp  vk_result.hpp
src/backend/frame/: CMakeLists.txt  vk_commands.cpp  vk_commands.hpp  vk_frame_manager.cpp  vk_frame_manager.hpp
src/backend/gpu/: CMakeLists.txt  vk_vertex_layout.hpp
src/backend/gpu/buffers/: CMakeLists.txt  vk_buffer.cpp  vk_buffer.hpp  vk_per_frame_uniform_buffers.cpp  vk_per_frame_uniform_buffers.hpp
src/backend/gpu/descriptors/: CMakeLists.txt  vk_material_sets.cpp  vk_material_sets.hpp  vk_scene_sets.cpp  vk_scene_sets.hpp  vk_shader_interface.cpp  vk_shader_interface.hpp
src/backend/gpu/images/: CMakeLists.txt  vk_depth_image.cpp  vk_depth_image.hpp  vk_image.cpp  vk_image.hpp
src/backend/gpu/textures/: CMakeLists.txt  vk_texture.hpp  vk_texture_utils.cpp  vk_texture_utils.hpp
src/backend/gpu/upload/: CMakeLists.txt  vk_buffer_uploader.cpp  vk_buffer_uploader.hpp  vk_instance_uploader.cpp  vk_instance_uploader.hpp  vk_material_uploader.cpp  vk_material_uploader.hpp  vk_texture_uploader.cpp  vk_texture_uploader.hpp  vk_upload_context.cpp  vk_upload_context.hpp
src/backend/graphics/: CMakeLists.txt  vk_framebuffers.cpp  vk_framebuffers.hpp  vk_pipeline.cpp  vk_pipeline.hpp
src/backend/presentation/: CMakeLists.txt  vk_presenter.cpp  vk_presenter.hpp  vk_swapchain.cpp  vk_swapchain.hpp
src/backend/profiling/: CMakeLists.txt  cpu_profiler.hpp  profiling_logger.cpp  profiling_logger.hpp  upload_profiler.cpp  upload_profiler.hpp  vk_gpu_profiler.cpp  vk_gpu_profiler.hpp
src/backend/render/: CMakeLists.txt  camera_ubo.hpp  framebuffer_cache.cpp  framebuffer_cache.hpp  main_pass.cpp  main_pass.hpp  mesh_gpu.hpp  per_frame_data.cpp  per_frame_data.hpp  push_constants.hpp  renderer.cpp  renderer.hpp  scene_data.cpp  scene_data.hpp  swapchain_attachments.cpp  swapchain_attachments.hpp  upload_manager.cpp  upload_manager.hpp  vk_framebuffers.cpp  vk_framebuffers.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_render_pass.cpp  vk_render_pass.hpp
src/backend/render/resources/: CMakeLists.txt  material_gpu.hpp  material_system.cpp  material_system.hpp  mesh_gpu.hpp  mesh_store.cpp  mesh_store.hpp  resource_store.cpp  resource_store.hpp
src/backend/resources/: CMakeLists.txt  vertex.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_depth_image.cpp  vk_depth_image.hpp  vk_per_frame_uniform.cpp  vk_per_frame_uniform.hpp  vk_uploader.cpp  vk_uploader.hpp  vk_vertex_layout.hpp
src/backend/resources/buffers/: vk_buffer.cpp  vk_buffer.hpp
src/backend/resources/descriptors/: CMakeLists.txt  vk_per_frame_sets.cpp  vk_per_frame_sets.hpp  vk_scene_sets.cpp  vk_scene_sets.hpp  vk_shader_interface.cpp
src/backend/resources/textures/: CMakeLists.txt
src/backend/resources/upload/: CMakeLists.txt  vk_buffer_uploader.cpp  vk_buffer_uploader.hpp  vk_instance_uploader.cpp  vk_instance_uploader.hpp  vk_material_uploader.cpp  vk_material_uploader.hpp  vk_texture_uploader.cpp  vk_texture_uploader.hpp  vk_upload_context.cpp  vk_upload_context.hpp
src/backend/shaders/: CMakeLists.txt  shader.frag  shader.vert  vk_shader.cpp  vulkan_shader.cpp  vulkan_shader.hpp
src/engine/: CMakeLists.txt
src/engine/app/: CMakeLists.txt  app.cpp  app.hpp
src/engine/assets/: CMakeLists.txt  stb_image_loader.cpp
src/engine/assets/gltf/: CMakeLists.txt  gltf_asset.cpp  gltf_asset.hpp  gltf_cpu_loader.cpp  gltf_cpu_loader.hpp  gltf_gpu_builder.cpp  gltf_gpu_builder.hpp  gltf_path.hpp  gltf_types.hpp
src/engine/assets/stb_image/: CMakeLists.txt  stb_image_loader.cpp  stb_image_loader.hpp
src/engine/camera/: CMakeLists.txt  camera.cpp  camera.hpp
src/engine/geometry/: CMakeLists.txt  mesh_builder.hpp  mesh_factory.hpp  primitives.cpp  primitives.hpp
src/engine/logging/: CMakeLists.txt  log.cpp  log.hpp
src/engine/mesh/: mesh_data.hpp  vertex.hpp
src/platform/: CMakeLists.txt
src/platform/input/: CMakeLists.txt  camera_controller.cpp  camera_controller.hpp
src/platform/window/: CMakeLists.txt  glfw_window.cpp  glfw_window.hpp
src/render/: CMakeLists.txt  renderer.cpp  renderer.hpp
src/render/rendergraph/: CMakeLists.txt  framebuffer_cache.cpp  framebuffer_cache.hpp  main_pass.cpp  main_pass.hpp  swapchain_attachments.cpp  swapchain_targets.cpp  swapchain_targets.hpp
src/render/resources/: CMakeLists.txt  material_system.cpp  material_system.hpp  mesh_gpu.hpp  mesh_store.cpp  mesh_store.hpp  resource_store.cpp  resource_store.hpp
src/render/scene/: CMakeLists.txt  push_constants.hpp  scene_data.cpp  scene_data.hpp
src/render/upload/: CMakeLists.txt  upload_manager.cpp  upload_manager.hpp
src/render/util/: scope_exit.hpp
